--- a/css/styles.css
+++ b/css/styles.css
@@ -79,14 +79,6 @@ h3 {
 
 /* latest post content */
 
-.slider-container {
-  margin: 0px auto;
-  width: 100%;
-  height: 70%;
-  box-sizing: border-box;
-  align-items: center;
-}
-
 .slides {
   box-sizing: border-box;
   margin: 0 auto;
@@ -165,17 +157,18 @@ h3 {
   max-width: var(--width);
   margin: 100px auto;
   background-color: var(--dark-green);
-  padding-top: 50px;
+  padding-top: 20px;
 }
 
 .topic-logo {
   flex: 0 0 auto;
-  margin: 30px;
+  margin-right: 100px;
+  margin-left: 50px;
 }
 
 .topic-logo img {
   height: 200px;
-  margin-top: 20px;
+  margin-top: 50px;
   box-sizing: border-box;
   width: var(--width);
   height: auto;
@@ -189,8 +182,9 @@ h3 {
 }
 
 .latest-blogpost {
-  width: 300px;
+  width: 100%;
   display: flex;
+  padding: 20px;
 }
 
 /* section flex containers */
@@ -203,27 +197,15 @@ h3 {
 }
 
 .section-flex-container {
-  display: flex;
   margin-top: 30px;
   height: auto;
-  width: var(--width);
-  display: flex;
   margin-bottom: 200px;
-}
-
-.lifestyle-container,
-.health-container {
-  max-width: var(--width);
-  width: 500px;
-  height: 300px;
+  margin-left: 20px;
 }
 
 .health-flex,
 .lifestyle-flex {
   display: flex;
-  width: 300px;
-  height: 350px;
-  max-width: var(--width);
 }
 
 /* specific */
@@ -866,6 +848,7 @@ textarea {
   .ocean {
     height: auto;
     width: 100%;
+    background-color: var(--grey);
   }
 
   .ocean-img img {
@@ -990,6 +973,7 @@ textarea {
   .ocean {
     height: 100%;
     width: 100%;
+    background-color: var(--grey);
   }
 
   /* section flex container */
