--- a/css/styles.css
+++ b/css/styles.css
@@ -725,7 +725,6 @@ textarea {
   .slides {
     display: flex;
     flex-direction: column;
-    height: auto;
     align-items: center;
     margin-bottom: 20px;
     min-height: 200px;
@@ -760,11 +759,29 @@ textarea {
   .latest-blogpost {
     flex-direction: row;
     margin: 20px auto;
+    width: 250px;
+    height: 350px;
+  }
+
+  .latest-blogpost h3,
+  .latest-blogpost p {
+    text-align: center;
+  }
+
+  .latest-blogpost p {
+    text-align: left;
+    margin: 0px;
+  }
+
+  .latest-blogpost img {
+    height: 230px;
+    width: 240px;
+    margin: 10px auto;
   }
 
   .topic-container {
-    margin-top: 450px;
-    height: 750px;
+    margin-top: 550px;
+    height: 850px;
     width: 100%;
     flex-direction: column;
   }
@@ -785,7 +802,7 @@ textarea {
   }
 
   .topic-content {
-    width: 400px;
+    width: 250px;
     height: 20px;
     margin: 0 auto;
   }
@@ -794,17 +811,17 @@ textarea {
 
   .section-flex-container {
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     max-width: var(--width);
+    height: auto;
+    margin-top: auto;
+    margin-bottom: auto;
   }
 
-  .health-container {
-    height: 500px;
-  }
 
   .lifestyle-container,
   .health-container {
-    margin: 0 auto;
+    margin: 350px auto;
     width: 350px;
     height: auto;
     max-width: var(--width);
@@ -812,21 +829,24 @@ textarea {
     box-sizing: border-box;
   }
 
-  .lifestyle-container h2,
-  .health-container h2 {
-    margin-top: 30px;
+  .health-container {
+    margin-top: 0px;
   }
+
+  .lifestyle-container {
+    margin-bottom: 20px;
+  }
+
 
   .health-flex,
   .lifestyle-flex {
-    display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 800px;
-    padding: 20px;
+    margin-top: 10px;
+    height: 1000px;
     box-sizing: var(--box-sizing);
   }
 
+ 
   /* specific */
 
   .content figure {
@@ -849,6 +869,7 @@ textarea {
     height: auto;
     width: 100%;
     background-color: var(--grey);
+    margin-top: 300px;
   }
 
   .ocean-img img {
