--- a/css/styles.css
+++ b/css/styles.css
@@ -189,23 +189,22 @@ h3 {
 
 /* section flex containers */
 
-.health-container h2,
-.lifestyle-container h2 {
-  color: var(--white);
-  width: var(--width);
-  text-align: center;
-}
-
 .section-flex-container {
-  margin-top: 30px;
-  height: auto;
-  margin-bottom: 200px;
-  margin-left: 20px;
+  margin: 0 auto;
 }
 
 .health-flex,
 .lifestyle-flex {
   display: flex;
+}
+
+.content-title {
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.lifestyle-flex {
+  margin-bottom: 50px;
 }
 
 /* specific */
@@ -818,7 +817,6 @@ textarea {
     margin-bottom: auto;
   }
 
-
   .lifestyle-container,
   .health-container {
     margin: 350px auto;
@@ -837,7 +835,6 @@ textarea {
     margin-bottom: 20px;
   }
 
-
   .health-flex,
   .lifestyle-flex {
     flex-direction: column;
@@ -846,7 +843,6 @@ textarea {
     box-sizing: var(--box-sizing);
   }
 
- 
   /* specific */
 
   .content figure {
