--- a/css/styles.css
+++ b/css/styles.css
@@ -43,41 +43,23 @@ body {
 }
 
 nav ul {
-  display: flex;
   list-style: none;
-  padding: 0;
-  margin: 0;
+  padding-right: 20px;
 }
 
 nav ul li {
+  display: inline-block;
   margin: 0 10px;
-  position: relative;
 }
 
 nav ul li a {
-  display: inline-block;
   color: var(--white);
   text-decoration: none;
-  padding-bottom: 2px;
-  position: relative;
 }
 
-nav ul li a::before {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: transparent;
-  transition: background-color 0.3s;
+.active {
+  color: var(--light-green);
 }
-
-nav ul li a:hover::before,
-nav ul li a.active::before {
-  background-color: var(--white);
-}
-
 /* Latest posts */
 
 .section-header {
