--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,10 @@ h3 {
 
 /* latest post content */
 
+.latest-container {
+  background-color: #0a4346;
+  height: 600px;
+}
 .slides {
   box-sizing: border-box;
   margin: 0 auto;
@@ -192,26 +196,32 @@ h3 {
 
 /* section flex containers */
 
+.content-title,
 .section-flex-container {
+  box-sizing: border-box;
   margin: 0 auto;
+  display: flex;
+  width: 800px;
+  height: 100%;
+  max-width: var(--width);
 }
 
 .health-flex,
 .lifestyle-flex {
   display: flex;
+  width: 90%;
+  margin: 0 auto;
+  justify-content: center;
 }
 
-.content-title {
-  margin-top: 20px;
-  margin-left: 10px;
-}
-
+.small-content-title-two,
 .small-content-title {
   display: none;
 }
 
 .lifestyle-flex {
   margin-bottom: 50px;
+  width: 90%;
 }
 
 /* specific */
@@ -452,10 +462,15 @@ textarea {
   height: 400px;
 }
 
+.footer-info p,
 .footer-links a {
   text-decoration: none;
   color: var(--white);
-  padding: 20px;
+}
+
+.footer-info p {
+  padding: 0px;
+  text-align: center;
 }
 
 .footer-row-1 {
@@ -483,8 +498,9 @@ textarea {
 }
 
 .footer-info h3 {
+  width: 100%;
   text-align: center;
-  padding-left: 100px;
+  margin-left: 80px;
 }
 
 .footer-row-3 {
@@ -768,7 +784,7 @@ textarea {
 
   .latest-container {
     height: 900px;
-    width: 80%;
+    width: var(--width);
     margin-bottom: 250px;
     margin: 0 auto;
   }
@@ -878,9 +894,16 @@ textarea {
     display: none;
   }
 
+  .small-content-title-two,
   .small-content-title {
     display: flex;
     width: 280px;
+    height: 100px;
+    margin-bottom: 10px;
+  }
+
+  .small-content-title-two {
+    margin-top: 0px;
   }
 
   .section-flex-container {
@@ -894,12 +917,16 @@ textarea {
 
   .lifestyle-container,
   .health-container {
-    margin: 350px auto;
+    margin: 20px auto;
     width: 350px;
     height: auto;
     max-width: 100%;
     padding-right: 40px;
     box-sizing: border-box;
+  }
+
+  .lifestyle-container {
+    margin-top: 0px;
   }
 
   .health-container {
@@ -913,9 +940,8 @@ textarea {
   .health-flex,
   .lifestyle-flex {
     flex-direction: column;
-    margin-top: 10px;
-    height: 1000px;
     box-sizing: var(--box-sizing);
+    margin-top: 0px;
   }
 
   /* blog posts */
@@ -1027,10 +1053,7 @@ textarea {
     margin: 0 auto;
   }
 
-  .footer-row-2 h3 {
-    padding-right: 100px;
-  }
-
+  .footer-info h3,
   .footer-info p {
     margin: 20px auto;
     padding-left: 0px;
